# WorkDesk-Studio

./: Cargo.toml  README.md
.github/workflows/: build-msi.yml  ci.yml  docs-sync.yml  prepare-onlyoffice-bundle.yml  prepare-sidecar-bundle.yml
apps/workdesk-desktop/: Cargo.toml
apps/workdesk-desktop/resources/i18n/: en.json  zh-TW.json
apps/workdesk-desktop/src/: api_client.rs  app_updater.rs  automation.rs  command.rs  command_bus.rs  controller.rs  lib.rs  main.rs  onlyoffice.rs  runtime_bootstrap.rs  sidecar_supervisor.rs  single_instance.rs  ui.rs
apps/workdesk-desktop/src/controller/: canvas.rs  diagnostics.rs  files.rs  mod.rs  office.rs  runs.rs  state.rs  workbench.rs
apps/workdesk-desktop/src/ui/: canvas.rs  diagnostics.rs  files.rs  mod.rs  office.rs  runs.rs  workbench.rs
apps/workdesk-desktop/src/ui/widgets/: choice_prompt.rs  mod.rs
apps/workdesk-desktop/tests/: automation_server.rs  command_bus_forwarding.rs  release_runtime.rs
crates/workdesk-core/: Cargo.toml  Dockerfile
crates/workdesk-core/migrations/: 2026030601_initial.sql  2026030602_run_queue.sql  2026030603_run_node_states.sql  2026030604_workbench_shell.sql
crates/workdesk-core/src/: api.rs  config.rs  errors.rs  lib.rs  main.rs  repository.rs  service.rs  types.rs  updater.rs
crates/workdesk-core/src/api/: mod.rs  workbench.rs
crates/workdesk-core/src/repository/: mod.rs  workbench.rs
crates/workdesk-core/tests/: api_envelope.rs  fs_tools.rs  run_queue.rs  updater.rs  workbench_sessions.rs  workflow_service.rs
crates/workdesk-domain/: Cargo.toml
crates/workdesk-domain/src/: lib.rs
crates/workdesk-domain/tests/: workflow_behavior.rs
crates/workdesk-runner/: Cargo.toml
crates/workdesk-runner/src/: lib.rs  main.rs  sidecar.rs
crates/workdesk-runner/src/runner/: daemon.rs  lib.rs  mod.rs  node_exec.rs  scheduler.rs  skills.rs  toolchain.rs
crates/workdesk-runner/tests/: daemon_skills.rs  toolchain_manager.rs
deploy/: docker-compose.phase2.yml
deploy/windows/updates/: app-update-public-key.txt
docs/: api.md  architecture.md
docs/en/: api.md  architecture.md  quickstart.md
docs/plans/: 2026-03-06-phase1-wave1-resume.md
docs/zh-TW/: api.md  architecture.md  quickstart.md
openspec/: project.md
openspec/changes/add-codex-native-workbench-shell/: design.md  proposal.md  tasks.md
openspec/changes/add-codex-native-workbench-shell/specs/core-service/: spec.md
openspec/changes/add-codex-native-workbench-shell/specs/desktop-shell/: spec.md
openspec/changes/add-codex-native-workbench-shell/specs/runner-engine/: spec.md
openspec/changes/add-codex-sdk-sidecar-auth-and-session/: design.md  proposal.md  tasks.md
openspec/changes/add-codex-sdk-sidecar-auth-and-session/specs/runner-engine/: spec.md
openspec/changes/add-embedded-onlyoffice-and-pdf-flow/: design.md  proposal.md  tasks.md
openspec/changes/add-embedded-onlyoffice-and-pdf-flow/specs/core-service/: spec.md
openspec/changes/add-managed-toolchains-and-isolated-code-runtime/: design.md  proposal.md  tasks.md
openspec/changes/add-managed-toolchains-and-isolated-code-runtime/specs/runner-engine/: spec.md
openspec/changes/add-windows-installer-and-update-system/: design.md  proposal.md  tasks.md
openspec/changes/add-windows-installer-and-update-system/specs/desktop-shell/: spec.md
openspec/changes/add-workflow-orchestrator-and-canvas/: design.md  proposal.md  tasks.md
openspec/changes/add-workflow-orchestrator-and-canvas/specs/runner-engine/: spec.md
openspec/changes/add-workspace-file-manager-editor/: design.md  proposal.md  tasks.md
openspec/changes/add-workspace-file-manager-editor/specs/core-service/: spec.md
openspec/specs/core-service/: spec.md
openspec/specs/desktop-shell/: spec.md
openspec/specs/runner-engine/: spec.md
scripts/: check_docs_sync.py
scripts/windows/: build-installer.ps1  install-toolchains.ps1  preflight-release.ps1  prepare-onlyoffice-bundle.ps1  prepare-sidecar-bundle.ps1  update-toolchains.ps1  upload-release-asset.ps1
scripts/windows/wix/: Harvest-Payload.ps1  Product.wxs
