[workspace]
members = [
  "apps/workdesk-desktop",
  "crates/workdesk-core",
  "crates/workdesk-domain",
  "crates/workdesk-runner",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["WorkDesk Studio Contributors"]

[workspace.dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
axum = { version = "0.8.1", features = ["macros"] }
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "process", "sync", "fs", "time"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
