[workspace]
members = [
  "apps/workdesk-desktop",
  "crates/workdesk-core",
  "crates/workdesk-domain",
  "crates/workdesk-runner",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["WorkDesk Studio Contributors"]

[workspace.dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["macros"] }
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
password-hash = { version = "0.5.0", features = ["rand_core"] }
rand = "0.8.5"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "process", "sync", "fs", "time", "net", "io-util", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
gpui = "0.2.2"
gpui-component = "0.5.1"
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }
urlencoding = "2.1.3"
