[package]
name = "workdesk-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dependencies.workdesk-core]
path = "../../crates/workdesk-core"

[dependencies.workdesk-runner]
path = "../../crates/workdesk-runner"
