[package]
name = "workdesk-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["webview"]
webview = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
gpui.workspace = true
gpui-component = { workspace = true, features = ["webview"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
windows-sys.workspace = true
urlencoding.workspace = true

[dependencies.workdesk-core]
path = "../../crates/workdesk-core"

[dependencies.workdesk-runner]
path = "../../crates/workdesk-runner"

[dev-dependencies]
ed25519-dalek.workspace = true
sha2.workspace = true
tempfile.workspace = true
