[package]
name = "workdesk-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dependencies.workdesk-domain]
path = "../workdesk-domain"

[dependencies.workdesk-runner]
path = "../workdesk-runner"

[dev-dependencies]
tokio.workspace = true
